--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.561.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
